--- a/webui/templates/index.html
+++ b/webui/templates/index.html
@@ -15,6 +15,9 @@
 			<option value="24">Last day</option>
 			<option value="72">Last 3 days</option>
 			<option value="168">Last week</option>
+			<option value="336">Last two weeks</option>
+			<option value="672">Last month</option>
+			<option value="2016">Last three months</option>
 		</select>
 		<canvas id="chart">
 		</canvas>
